--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -13,11 +13,11 @@ page-about {
   }
   .modal_content {
     position: absolute;
-    top: calc(50% - (50%/2));
+    top: calc(50% - (20%/2));
     left: 0;
     right: 0;
     width: 100%;
-    height: 50%;
+    height: 20%;
     padding: 10px;
     z-index: 100;
     margin: 0 auto;
@@ -34,4 +34,8 @@ page-about {
     -webkit-box-sizing: border-box;
     overflow: hidden;
   }
+  .theroot {
+  height: 100px;
+  background-color: yellow;
+}
 }
